--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
         async function addData(dataType, newData) {
     // ... इतर कोड ...
 
-    const filePath = `data/${dataType}.json`;
+    const filePath = `${dataType}.json`;
     let currentData = [];
     let fileSha = null;
 
