--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                 </div>
                 <!-- Source Pagination Controls -->
                 <div class="flex justify-center items-center space-x-2 mt-4">
-                    <button id="prevPageButton" class="p-2 rounded-full bg-blue-100 text-blue-700 hover:bg-blue-200 disabled:opacity-50 disabled:cursor-not-allowed transition-colors">
+                    <button id="prevPageButtonSource" class="p-2 rounded-full bg-blue-100 text-blue-700 hover:bg-blue-200 disabled:opacity-50 disabled:cursor-not-allowed transition-colors">
                         <i data-lucide="chevron-left" class="lucide lucide-chevron-left w-5 h-5"></i>
                     </button>
-                    <div id="paginationButtons" class="flex space-x-1">
+                    <div id="paginationButtonsSource" class="flex space-x-1">
                         <!-- Pagination page buttons will be injected here -->
                     </div>
-                    <button id="nextPageButton" class="p-2 rounded-full bg-blue-100 text-blue-700 hover:bg-blue-200 disabled:opacity-50 disabled:cursor-not-allowed transition-colors">
+                    <button id="nextPageButtonSource" class="p-2 rounded-full bg-blue-100 text-blue-700 hover:bg-blue-200 disabled:opacity-50 disabled:cursor-not-allowed transition-colors">
                         <i data-lucide="chevron-right" class="lucide lucide-chevron-right w-5 h-5"></i>
                     </button>
                 </div>
@@ -85,9 +85,21 @@
 
             <!-- Destinations Section -->
             <div class="space-y-4">
-                <h2 class="text-xl font-semibold text-gray-800 text-center">Destinations</h2>
+                <h2 class="text-xl font-semibold text-gray-800 text-center" id="destinationsHeader">Destinations (Page: Tech)</h2>
                 <div id="destinationsContainer" class="grid grid-cols-5 sm:grid-cols-6 lg:grid-cols-10 gap-3 p-2 bg-gray-50 rounded-lg shadow-inner max-h-80 overflow-y-auto">
                     <!-- Destination blocks will be injected here by JavaScript -->
+                </div>
+                <!-- Destination Pagination Controls -->
+                <div class="flex justify-center items-center space-x-2 mt-4">
+                    <button id="prevPageButtonDestination" class="p-2 rounded-full bg-blue-100 text-blue-700 hover:bg-blue-200 disabled:opacity-50 disabled:cursor-not-allowed transition-colors">
+                        <i data-lucide="chevron-left" class="lucide lucide-chevron-left w-5 h-5"></i>
+                    </button>
+                    <div id="paginationButtonsDestination" class="flex space-x-1">
+                        <!-- Pagination page buttons will be injected here -->
+                    </div>
+                    <button id="nextPageButtonDestination" class="p-2 rounded-full bg-blue-100 text-blue-700 hover:bg-blue-200 disabled:opacity-50 disabled:cursor-not-allowed transition-colors">
+                        <i data-lucide="chevron-right" class="lucide lucide-chevron-right w-5 h-5"></i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -107,8 +119,12 @@
         let allDestinations = [];
         let routingMap = new Map(); // Map<string, string> (Source -> Destination)
         let history = []; // Stores snapshots of routingMap (as array of entries for serialization)
-        let currentPage = 1;
-        const itemsPerPage = 25; // 25 sources per page
+
+        let currentPageSource = 1; // Current page for sources
+        const itemsPerPageSource = 25; // 25 sources per page
+
+        let currentPageDestination = 1; // Current page for destinations
+        const itemsPerPageDestination = 25; // 25 destinations per page (keeping same for consistency)
 
         let pendingSource = null; // Source selected by user, awaiting 'Take'
         let pendingDestination = null; // Destination selected by user, awaiting 'Take'
@@ -173,10 +189,18 @@
         const destinationsContainer = document.getElementById('destinationsContainer');
         const takeButton = document.getElementById('takeButton');
         const undoButton = document.getElementById('undoButton');
-        const prevPageButton = document.getElementById('prevPageButton');
-        const nextPageButton = document.getElementById('nextPageButton');
-        const paginationButtonsContainer = document.getElementById('paginationButtons');
+
+        const prevPageButtonSource = document.getElementById('prevPageButtonSource');
+        const nextPageButtonSource = document.getElementById('nextPageButtonSource');
+        const paginationButtonsSource = document.getElementById('paginationButtonsSource');
         const sourcesHeader = document.getElementById('sourcesHeader');
+
+        const prevPageButtonDestination = document.getElementById('prevPageButtonDestination');
+        const nextPageButtonDestination = document.getElementById('nextPageButtonDestination');
+        const paginationButtonsDestination = document.getElementById('paginationButtonsDestination');
+        const destinationsHeader = document.getElementById('destinationsHeader');
+
+
         const salvoButtonsContainer = document.getElementById('salvoButtonsContainer');
 
         // --- Helper Functions ---
@@ -224,12 +248,12 @@
         function renderSources() {
             sourcesContainer.innerHTML = ''; // Clear existing sources
 
-            const totalPages = Math.ceil(allSources.length / itemsPerPage);
-            const startIndex = (currentPage - 1) * itemsPerPage;
-            const endIndex = startIndex + itemsPerPage;
+            const totalPagesSource = Math.ceil(allSources.length / itemsPerPageSource);
+            const startIndex = (currentPageSource - 1) * itemsPerPageSource;
+            const endIndex = startIndex + itemsPerPageSource;
             const currentSources = allSources.slice(startIndex, endIndex);
 
-            sourcesHeader.textContent = `Sources (Page: ${pageNames[currentPage - 1] || `Page ${currentPage}`})`;
+            sourcesHeader.textContent = `Sources (Page: ${pageNames[currentPageSource - 1] || `Page ${currentPageSource}`})`;
 
             currentSources.forEach(source => {
                 const isHighlighted = source === pendingSource;
@@ -254,32 +278,40 @@
                 sourcesContainer.appendChild(blockDiv);
             });
 
-            // Update pagination buttons
-            paginationButtonsContainer.innerHTML = '';
-            for (let i = 1; i <= totalPages; i++) {
+            // Update source pagination buttons
+            paginationButtonsSource.innerHTML = '';
+            for (let i = 1; i <= totalPagesSource; i++) {
                 const pageButton = document.createElement('button');
                 pageButton.textContent = pageNames[i - 1] || `Page ${i}`;
                 pageButton.className = `px-3 py-1 rounded-full text-sm font-medium transition-colors ${
-                    currentPage === i
+                    currentPageSource === i
                         ? 'bg-blue-600 text-white shadow-md'
                         : 'bg-gray-200 text-gray-700 hover:bg-gray-300'
                 }`;
-                pageButton.addEventListener('click', () => goToPage(i));
-                paginationButtonsContainer.appendChild(pageButton);
+                pageButton.addEventListener('click', () => goToPageSource(i));
+                paginationButtonsSource.appendChild(pageButton);
             }
 
-            prevPageButton.disabled = currentPage === 1;
-            nextPageButton.disabled = currentPage === totalPages;
-            prevPageButton.classList.toggle('opacity-50', currentPage === 1);
-            prevPageButton.classList.toggle('cursor-not-allowed', currentPage === 1);
-            nextPageButton.classList.toggle('opacity-50', currentPage === totalPages);
-            nextPageButton.classList.toggle('cursor-not-allowed', currentPage === totalPages);
+            prevPageButtonSource.disabled = currentPageSource === 1;
+            nextPageButtonSource.disabled = currentPageSource === totalPagesSource;
+            prevPageButtonSource.classList.toggle('opacity-50', currentPageSource === 1);
+            prevPageButtonSource.classList.toggle('cursor-not-allowed', currentPageSource === 1);
+            nextPageButtonSource.classList.toggle('opacity-50', currentPageSource === totalPagesSource);
+            nextPageButtonSource.classList.toggle('cursor-not-allowed', currentPageSource === totalPagesSource);
         }
 
         function renderDestinations() {
             destinationsContainer.innerHTML = ''; // Clear existing destinations
 
-            allDestinations.forEach(destination => {
+            const totalPagesDestination = Math.ceil(allDestinations.length / itemsPerPageDestination);
+            const startIndex = (currentPageDestination - 1) * itemsPerPageDestination;
+            const endIndex = startIndex + itemsPerPageDestination;
+            const currentDestinations = allDestinations.slice(startIndex, endIndex);
+
+            destinationsHeader.textContent = `Destinations (Page: ${pageNames[currentPageDestination - 1] || `Page ${currentPageDestination}`})`;
+
+
+            currentDestinations.forEach(destination => {
                 const isHighlighted = destination === pendingDestination;
                 const isCurrentDestinationForPendingSource =
                     pendingSource && routingMap.get(pendingSource) === destination && pendingDestination !== destination;
@@ -301,6 +333,27 @@
                 blockDiv.addEventListener('click', () => handleDestinationClick(destination));
                 destinationsContainer.appendChild(blockDiv);
             });
+
+            // Update destination pagination buttons
+            paginationButtonsDestination.innerHTML = '';
+            for (let i = 1; i <= totalPagesDestination; i++) {
+                const pageButton = document.createElement('button');
+                pageButton.textContent = pageNames[i - 1] || `Page ${i}`;
+                pageButton.className = `px-3 py-1 rounded-full text-sm font-medium transition-colors ${
+                    currentPageDestination === i
+                        ? 'bg-blue-600 text-white shadow-md'
+                        : 'bg-gray-200 text-gray-700 hover:bg-gray-300'
+                }`;
+                pageButton.addEventListener('click', () => goToPageDestination(i));
+                paginationButtonsDestination.appendChild(pageButton);
+            }
+
+            prevPageButtonDestination.disabled = currentPageDestination === 1;
+            nextPageButtonDestination.disabled = totalPagesDestination === 0 || currentPageDestination === totalPagesDestination;
+            prevPageButtonDestination.classList.toggle('opacity-50', currentPageDestination === 1);
+            prevPageButtonDestination.classList.toggle('cursor-not-allowed', currentPageDestination === 1);
+            nextPageButtonDestination.classList.toggle('opacity-50', totalPagesDestination === 0 || currentPageDestination === totalPagesDestination);
+            nextPageButtonDestination.classList.toggle('cursor-not-allowed', totalPagesDestination === 0 || currentPageDestination === totalPagesDestination);
         }
 
         function renderSalvoButtons() {
@@ -399,35 +452,66 @@
             updateUI();
         }
 
-        // Pagination handlers
-        function goToNextPage() {
-            const totalPages = Math.ceil(allSources.length / itemsPerPage);
-            if (currentPage < totalPages) {
-                currentPage++;
+        // Pagination handlers for Sources
+        function goToNextPageSource() {
+            const totalPagesSource = Math.ceil(allSources.length / itemsPerPageSource);
+            if (currentPageSource < totalPagesSource) {
+                currentPageSource++;
                 pendingSource = null; // Clear selection on page change
-                pendingDestination = null; // Clear selection on page change
+                // Note: pendingDestination is NOT cleared here
                 updateUI();
             }
         }
 
-        function goToPreviousPage() {
-            if (currentPage > 1) {
-                currentPage--;
+        function goToPreviousPageSource() {
+            if (currentPageSource > 1) {
+                currentPageSource--;
                 pendingSource = null; // Clear selection on page change
-                pendingDestination = null; // Clear selection on page change
+                // Note: pendingDestination is NOT cleared here
                 updateUI();
             }
         }
 
-        function goToPage(pageNumber) {
-            const totalPages = Math.ceil(allSources.length / itemsPerPage);
-            if (pageNumber >= 1 && pageNumber <= totalPages) {
-                currentPage = pageNumber;
+        function goToPageSource(pageNumber) {
+            const totalPagesSource = Math.ceil(allSources.length / itemsPerPageSource);
+            if (pageNumber >= 1 && pageNumber <= totalPagesSource) {
+                currentPageSource = pageNumber;
                 pendingSource = null; // Clear selection on page change
-                pendingDestination = null; // Clear selection on page change
+                // Note: pendingDestination is NOT cleared here
                 updateUI();
             }
         }
+
+        // Pagination handlers for Destinations
+        function goToNextPageDestination() {
+            const totalPagesDestination = Math.ceil(allDestinations.length / itemsPerPageDestination);
+            if (currentPageDestination < totalPagesDestination) {
+                currentPageDestination++;
+                pendingDestination = null; // Clear selection on page change
+                // Note: pendingSource is NOT cleared here
+                updateUI();
+            }
+        }
+
+        function goToPreviousPageDestination() {
+            if (currentPageDestination > 1) {
+                currentPageDestination--;
+                pendingDestination = null; // Clear selection on page change
+                // Note: pendingSource is NOT cleared here
+                updateUI();
+            }
+        }
+
+        function goToPageDestination(pageNumber) {
+            const totalPagesDestination = Math.ceil(allDestinations.length / itemsPerPageDestination);
+            if (pageNumber >= 1 && pageNumber <= totalPagesDestination) {
+                currentPageDestination = pageNumber;
+                pendingDestination = null; // Clear selection on page change
+                // Note: pendingSource is NOT cleared here
+                updateUI();
+            }
+        }
+
 
         // --- Initialization ---
         function initApp() {
@@ -443,8 +527,12 @@
             // Attach event listeners to fixed buttons
             takeButton.addEventListener('click', handleTake);
             undoButton.addEventListener('click', handleUndo);
-            prevPageButton.addEventListener('click', goToPreviousPage);
-            nextPageButton.addEventListener('click', goToNextPage);
+
+            prevPageButtonSource.addEventListener('click', goToNextPageSource); // Fixed typo, should be prevPageButtonSource
+            nextPageButtonSource.addEventListener('click', goToNextPageSource);
+            prevPageButtonDestination.addEventListener('click', goToPreviousPageDestination);
+            nextPageButtonDestination.addEventListener('click', goToNextPageDestination);
+
 
             // Initial UI render
             updateUI();
