--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Header -->
         <div class="flex flex-col md:flex-row justify-between items-start md:items-center mb-6 border-b pb-4 border-gray-200">
             <h1 class="text-3xl font-extrabold text-blue-700 tracking-tight mb-2 md:mb-0">
-                Situs Router Control Panel
+                Sirus Router Control Panel
             </h1>
             <div class="flex space-x-3 mt-4 md:mt-0">
                 <!-- Take Button -->
