--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Situs Router Control Panel</title>
+    <title>Sirus Router Control Panel</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide Icons CDN -->
@@ -29,6 +29,15 @@
             position: relative;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1), 0 1px 3px rgba(0,0,0,0.08); /* Initial shadow */
             border-radius: 0.5rem; /* Equivalent to rounded-lg */
+            padding: 0.75rem; /* Adjusted padding for better multi-line text display (p-3) */
+            /* Removed white-space: nowrap; overflow: hidden; text-overflow: ellipsis; */
+            /* Allowing text to wrap, so no need for ellipsis */
+            display: flex; /* Use flex to center content */
+            align-items: center; /* Vertically center */
+            justify-content: center; /* Horizontally center */
+            text-align: center; /* Ensure text is centered within the block */
+            line-height: 1.3; /* Adjust line height for better readability of two lines */
+            min-height: 5rem; /* Set a minimum height to ensure consistent block size for two lines */
         }
         .router-block:hover {
             transform: translateY(-2px);
@@ -59,16 +68,10 @@
         /* Disable scrolling */
         #sourcesContainer, #destinationsContainer {
             overflow-y: hidden; /* Disable vertical scrolling */
-            /* Ensure enough height to fit all elements without scrollbar appearing */
-            /* This height is calculated based on 5 rows of elements with typical padding/gap */
-            height: 280px; /* Adjusted height for 5 rows of items + padding/gap */
-        }
-
-        /* Adjustments for destination block text to fit better */
-        #destinationsContainer > div {
-            white-space: nowrap; /* Prevent text wrapping */
-            overflow: hidden;    /* Hide overflowing text */
-            text-overflow: ellipsis; /* Add ellipsis for overflow */
+            /* Adjusted height to accommodate taller 2-line blocks. */
+            /* 5rem (min-height) * 5 rows + 4 * 0.75rem (gap-3) = 25rem + 3rem = 28rem. 28rem * 16px/rem = 448px */
+            /* Adding a bit more for top/bottom container padding (p-2) */
+            height: 470px; /* Ensures 5 rows of items fit without scrolling */
         }
     </style>
 </head>
@@ -78,7 +81,7 @@
         <!-- Header -->
         <div class="flex flex-col md:flex-row justify-between items-start md:items-center mb-6 border-b pb-4 border-gray-200">
             <h1 class="text-3xl font-extrabold text-blue-700 tracking-tight mb-2 md:mb-0">
-                Situs Router Control Panel
+                Sirus Router Control Panel
             </h1>
             <div class="flex space-x-3 mt-4 md:mt-0">
                 <!-- Take Button -->
@@ -119,7 +122,7 @@
             <!-- Destinations Section -->
             <div class="space-y-4">
                 <h2 class="text-xl font-semibold text-gray-800 text-center" id="destinationsHeader">Destinations (Page: Tech)</h2>
-                <div id="destinationsContainer" class="grid grid-cols-4 sm:grid-cols-5 lg:grid-cols-7 gap-3 p-2 bg-gray-50 rounded-lg shadow-inner">
+                <div id="destinationsContainer" class="grid grid-cols-3 sm:grid-cols-4 lg:grid-cols-5 gap-3 p-2 bg-gray-50 rounded-lg shadow-inner">
                     <!-- Destination blocks will be injected here by JavaScript -->
                 </div>
                 <!-- Destination Pagination Controls -->
@@ -154,10 +157,10 @@
         let history = []; // Stores snapshots of routingMap (as array of entries for serialization)
 
         let currentPageSource = 1; // Current page for sources
-        const itemsPerPageSource = 25; // 25 sources per page
+        const itemsPerPageSource = 25; // 25 sources per page (5 rows * 5 columns)
 
         let currentPageDestination = 1; // Current page for destinations
-        const itemsPerPageDestination = 25; // 25 destinations per page (keeping same for consistency)
+        const itemsPerPageDestination = 25; // 25 destinations per page (5 rows * 5 columns)
 
         let pendingSource = null; // Source selected by user, awaiting 'Take'
         let pendingDestination = null; // Destination selected by user, awaiting 'Take'
@@ -294,7 +297,7 @@
                 const isCurrentlyRoutingToSelectedDestination = pendingDestination && routingMap.get(source) === pendingDestination;
 
                 const blockDiv = document.createElement('div');
-                let blockClasses = `p-3 text-center font-medium router-block cursor-pointer select-none`;
+                let blockClasses = `router-block cursor-pointer select-none`; // p-3 moved to CSS min-height/padding
 
                 if (isHighlighted) {
                     blockClasses += ' bg-red-500 text-white highlighted-red';
@@ -350,7 +353,7 @@
                     pendingSource && routingMap.get(pendingSource) === destination && pendingDestination !== destination;
 
                 const blockDiv = document.createElement('div');
-                let blockClasses = `p-3 text-center font-medium router-block cursor-pointer select-none`;
+                let blockClasses = `router-block cursor-pointer select-none`; // p-3 moved to CSS min-height/padding
 
                 if (isHighlighted) {
                     blockClasses += ' bg-red-500 text-white highlighted-red';
